# DualDesk

./: .gitignore  CMakeLists.txt  README.md  build.bat  start  test_driver.ps1
DualDeskDriver/: DualDeskDriver.slnx
DualDeskDriver/DualDeskDriver/: DualDeskDriver.inf  DualDeskDriver.vcxproj  DualDeskDriver.vcxproj.filters  build_log.txt  driver_simple.cpp
DualDeskDriver/DualDeskDriver/x64/Debug/: DualDeskDriver.cer  DualDeskDriver.sys.recipe  DualDeskDriver.vcxproj.FileListAbsolute.txt
DualDeskDriver/DualDeskDriver/x64/Debug/DualDeskDriver/: DualDeskDriver.sys
DualDeskDriver/DualDeskDriver/x64/Debug/DualDeskDriver.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  DualDeskDriver.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  signtool.command.1.tlog  signtool.read.1.tlog  signtool.timestamp.1.tlog  signtool.write.1.tlog
DualDeskDriver/DualDeskDriver/x64/Release/: DualDeskDriver.sys  DualDeskDriver.sys.recipe  DualDeskDriver.vcxproj.FileListAbsolute.txt
DualDeskDriver/DualDeskDriver/x64/Release/DualDeskDriver/: DualDeskDriver.sys
DualDeskDriver/DualDeskDriver/x64/Release/DualDeskDriver.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  DualDeskDriver.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  signtool.command.1.tlog  signtool.read.1.tlog  signtool.timestamp.1.tlog  signtool.write.1.tlog
DualDeskDriver/x64/Debug/: DualDeskDriver.inf
app/: CMakeLists.txt
app/include/dualdesk/: application.h  dual_mouse_manager.h
app/src/: application.cpp  main.cpp  mouse.cpp
app/src/include/dualdesk/: application.h
app/web/: index.html  script.js  style.css
core/: CMakeLists.txt
core/include/dualdesk/: version.h
core/include/dualdesk/core/: config_manager.h  driver_interface.h  error_handler.h  logger.h  types.h
core/include/dualdesk/cursor/: cursor_emulator.h  virtual_cursor.h
core/include/dualdesk/display/: display_info.h  display_manager.h  monitor_border.h
core/include/dualdesk/input/: eithermouse_plugin.h  input_device.h  input_event.h  input_filter.h  input_manager.h  input_router.h  input_translator.h  raw_input_handler.h  virtual_input.h
core/include/dualdesk/workspace/: window_info.h  window_mover.h  window_snapper.h  window_tracker.h  workspace.h  workspace_manager.h
core/src/: display_manager.cpp  display_manager.h  driver_interface.cpp  logger.cpp  window_tracker.cpp
core/src/cursor/: cursor_emulator.cpp  virtual_cursor.cpp
core/src/display/: monitor_border.cpp
core/src/input/: eithermouse_plugin.cpp  input_device.cpp  input_event.cpp  input_filter.cpp  input_manager.cpp  input_router.cpp  input_translator.cpp  raw_input_handler.cpp  virtual_input.cpp
core/src/workspace/: window_mover.cpp  window_snapper.cpp  workspace.cpp  workspace_manager.cpp
driver/: DualDeskDriver.vcxproj  application.h
driver/dualmouse/: dualmouse.c  dualmouse.h
driver/include/dualdesk/driver/: driver_common.h  ioctl_codes.h
driver/inf/: dualdesk.inf
driver/src/: driver_device.cpp  driver_filter.cpp  driver_main.cpp  driver_queue.cpp
driver/test/: CMakeLists.txt  driver_tester.cpp  test_integration.cpp  test_ioctl.cpp
driver/x64/Debug/DualDeskDriver.tlog/: DualDeskDriver.lastbuildstate
driver/x64/Release/: DualDeskDriver.sys  DualDeskDriver.sys.recipe  DualDeskDriver.vcxproj.FileListAbsolute.txt  DualDeskTest.cer  dualdesk.cat  dualdesk.inf  dualdesk.sys
driver/x64/Release/DualDeskDriver.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  DualDeskDriver.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  stampinf.command.1.tlog  stampinf.read.1.tlog
versions/DualDesk-v1.0.0/: README.md  dualdesk.sys  install.bat
